# toy-lang

./: CMakeLists.txt  toy.mlir
compiler/: AST.cpp  toyc.cpp
include/: CMakeLists.txt
include/Standalone/: CMakeLists.txt
include/Toy/: AST.h  CMakeLists.txt  Dialect.h  Lexer.h  MLIRGen.h  Ops.td  Parser.h  Passes.h  ShapeInferenceInterface.h  ShapeInferenceInterface.td
lib/: CMakeLists.txt
lib/Toy/: CMakeLists.txt  Dialect.cpp  LowerToAffineLoops.cpp  LowerToLLVM.cpp  MLIRGen.cpp  ShapeInferencePass.cpp  ToyCombine.cpp  ToyCombine.td
mlir/: Dialect.cpp  MLIRGen.cpp
parser/: CMakeLists.txt
test/: print.mlir  struct.toy  struct_access.toy  to-affine.mlir  trivial_reshape.toy  two_transpose.toy
